# ousia-forge

./: Cargo.toml  README.md
spec/: defined_classes.toml  dispositions.toml  information.toml  ontology.toml  organisms.toml  processes.toml  qualities.toml  roles.toml
src/: builder.rs  checker.rs  error.rs  lib.rs  main.rs  model.rs  parser.rs  stats.rs
tests/: integration.rs
